2017-03-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28079.

	* src/gsad_omp.c (get_system_reports_omp): Show the page with a
	report duration of one day by default and have the duration apply
	to the start time.

2017-03-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28076.

	* src/gsad_gmp.c (save_config_omp): Free and replace response for first
	command only if preferences are sent.

2017-03-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28072.

	* src/gsad_gmp.c (save_config_omp): Send modify_config command with
	trends and family selections only if parameters for at least one of the
	two are given.

2017-03-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28062.

	* src/html/classic/omp.xsl (report [assets]): Add missing blank cells
	in the footer row of the table.

2017-03-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/css/gsa-style.css (.performance-presets ul li + li):
	Add missing "+" in selector.

2017-03-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28052.

	* src/html/classic/gsad.xsl (html-footer): Update copyright text.

	* src/html/classic/help.xsl (about.html): Update copyright text.

	* src/html/classic/help_ru.xsl (about.html): Update copyright text.
	
	* src/html/classic/help_zh_CN.xsl (about.html): Update copyright text.

2017-03-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28050.

	* src/html/classic/omp.xsl (html-feed-row): Show feed as current only
	when it is less than 2 days old and don't show number of days in that
	case.

2017-03-20  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28048.

	* src/html/classic/omp.xsl (html-feed-row): Mention explicitly that
	feed is current in status text when it is newer than 10 days.

2017-03-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0.3.

2017-03-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
